<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2013, Apptentive, Inc. All Rights Reserved.
  ~ Please refer to the LICENSE file for the terms and conditions
  ~ under which redistribution and use of this file is permitted.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="@dimen/apptentive_dialog_side_padding"
            android:paddingRight="@dimen/apptentive_dialog_side_padding">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="16dp"
                  android:background="@drawable/apptentive_dialog_background">
        <TextView android:id="@+id/title"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_marginBottom="16dp"
                  android:textColor="@color/apptentive_dialog_title_text"
                  android:textSize="@dimen/apptentive_text_large"
                  android:textStyle="bold"
                  android:text="@string/apptentive_dialog_email_validation_failed_title"/>
        <TextView android:id="@+id/body"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_marginBottom="24dp"
                  android:textColor="@color/apptentive_dialog_body_text"
                  android:textSize="@dimen/apptentive_text_medium"
                  android:text="@string/apptentive_dialog_email_validation_failed_body"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <FrameLayout android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"/>
            <Button android:id="@+id/ok"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="48dp"
                    android:background="@drawable/apptentive_dialog_positive_button"
                    android:textColor="@drawable/apptentive_dialog_positive_button_text"
                    android:textSize="@dimen/apptentive_text_medium"
                    android:text="@string/apptentive_ok"/>
            <FrameLayout android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>