<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright (c) 2013, Apptentive, Inc. All Rights Reserved.
~ Please refer to the LICENSE file for the terms and conditions
~ under which redistribution and use of this file is permitted.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="@dimen/apptentive_dialog_side_padding"
            android:paddingRight="@dimen/apptentive_dialog_side_padding">
    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@drawable/apptentive_dialog_background">
        <LinearLayout android:id="@+id/apptentive_intro_instructions_container"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_alignParentTop="true"
                      android:layout_alignParentLeft="true">
            <TextView android:id="@+id/title"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/apptentive_dialog_title_text"
                      android:textStyle="bold"
                      android:textSize="@dimen/apptentive_text_large"
                      android:text=""/>
            <TextView android:id="@+id/body"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/apptentive_dialog_body_text"
                      android:textSize="@dimen/apptentive_text_medium"
                      android:text=""/>
        </LinearLayout>
        <AutoCompleteTextView android:id="@+id/email"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:layout_alignParentLeft="true"
                              android:layout_below="@id/apptentive_intro_instructions_container"
                              android:background="@drawable/android_textfield_activated_holo_light"
                              android:cursorVisible="true"
                              android:inputType="textEmailAddress"
                              android:textColor="@color/apptentive_dialog_form_text"
                              android:completionThreshold="1"
                              android:textCursorDrawable="@null"
                              android:hint="@string/apptentive_edittext_hint_email"/>
        <EditText android:id="@+id/message"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:layout_below="@id/email"
                  android:layout_marginBottom="16dp"
                  android:gravity="bottom"
                  android:background="@drawable/android_textfield_activated_holo_light"
                  android:capitalize="sentences"
                  android:textColor="@color/apptentive_dialog_form_text"
                  android:textCursorDrawable="@null"
                  android:singleLine="false"
                  android:minLines="2"
                  android:maxLines="5"
                  android:hint="@string/apptentive_intro_dialog_edittext_hint"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_below="@id/message"
                      android:layout_alignParentRight="true">
            <Button android:id="@+id/no_thanks"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/apptentive_dialog_negative_button"
                    android:textColor="@drawable/apptentive_dialog_negative_button_text"
                    android:textSize="@dimen/apptentive_text_medium"
                    android:text="@string/apptentive_no_thanks"/>
            <Button android:id="@+id/send"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/apptentive_dialog_positive_button"
                    android:textColor="@drawable/apptentive_dialog_positive_button_text"
                    android:textSize="@dimen/apptentive_text_medium"
                    android:text="@string/apptentive_send"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>